# ebernburg2024

./: .clang-format  .markdownlint.json  README.md  hello  hello.cpp
guides/: linux.md  macos.md  windows.md
mandelbrot/: CMakeLists.txt  README.md  main.cpp
project/: README.md  day1.md  day2.md  day3.md  day4.md  day5.md  project_overview.md
project/solutions/day2/: daisyworld.cpp  functions.cpp
project/solutions/day3/: daisyworld.cpp
project/solutions/day4/: daisyworld.cpp
project/solutions/final/: CMakeLists.txt  main.cpp  patch.cpp  patch.hpp  test.cpp  world.cpp  world.hpp
